PLayed around with whitespace so the generated _site file will be prettier and more readable, which is useful for debugging

--- a/_includes/form/components/group.html
+++ b/_includes/form/components/group.html
@@ -1,4 +1,4 @@
 <div class="form-group">
-  {% include form/components/label.html id=include.id title=include.title required=include.required -%}
-  {%- include form/components/input.html title=include.title type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule %}
+  {% include form/components/label.html id=include.id title=include.title required=include.required %}
+  {% include form/components/input.html title=include.title type=include.type required=include.required value=include.value readonly=include.readonly rule=include.rule %}
 </div>
