--- a/_includes/form/presets/submitter.html
+++ b/_includes/form/presets/submitter.html
@@ -1,6 +1,5 @@
-{%- include form/presets/hr.html -%}
-
-{%- assign title = "submitter" -%}
+{%- include form/presets/hr.html %}
+{% assign title = "submitter" -%}
 {%- include form/components/title.html id=include.idPreset title=title -%}
 
 {%- include form/components/group-group.html id=include.idPreset title=title group="username" rule="alphanum-space" -%}
