--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="{{ page.lang }}" dir="ltr">
 <!--<![endif]-->
-
-  {%- include head.html -%}
-
-  <body vocab="http://schema.org/" typeof="WebPage" class="page-{{ page.ref }}">
-
-    {%- include header.html -%}
-
-    {{ content }}
-
-    {%- include footer.html -%}
-
-  </body>
+{% include head.html %}
+<body vocab="http://schema.org/" typeof="WebPage" class="page-{{ page.ref }}">
+{% include header.html %}
+{{ content }}
+{% include footer.html %}
+</body>
 
 </html>
