Improvements on whitespace control

--- a/_includes/form/presets/submitter.html
+++ b/_includes/form/presets/submitter.html
@@ -1,4 +1,4 @@
-{%- include form/presets/hr.html %}
+{%- include form/presets/hr.html -%}
 {% assign title = "submitter" -%}
 {%- include form/components/title.html id=include.idPreset title=title -%}
 
