--- a/_includes/form/loop.html
+++ b/_includes/form/loop.html
@@ -37,13 +37,14 @@
       {% include form/presets/selectStandard.html id=id -%}
     {%- when 'selectCode' -%}
       {% include form/presets/selectCode.html id=id -%}
-    {% when 'selectOss' %}
-      {% include form/presets/selectOss.html id=id %}
+    {%- when 'selectOss' -%}
+      {% include form/presets/selectOss.html id=id -%}
     {% when 'newAdmin' %}
       {% include form/presets/newAdmin.html id=idPreset %}
     {%- when 'hr' -%}
       {% include form/presets/hr.html -%}
     {%- when 'empty' -%}
+      <!-- empty -->
     {%- else -%}
       {%- if page.lang == 'en' -%}
         <p>Throw <span style="color: red;">ERROR</span> (<strong>preset {{ formGroup.preset }}</strong> not found).</p>
