--- a/_includes/ossTable.html
+++ b/_includes/ossTable.html
@@ -56,7 +56,7 @@
 </div>
 
 <!-- Data Table -->
-<div class="col-md-9">
+<div class="col-md-9" style="margin-bottom: 20px;">
   <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [0, "asc"], "columnDefs": [{"targets": [3,5], "visible": false}], "paging": true}'>
     <thead>
       <tr>
