--- a/_includes/standardsTable.html
+++ b/_includes/standardsTable.html
@@ -5,7 +5,16 @@
   <details open>
     <summary><h4 class="h4">Filter Options</h4></summary>
     <form class="wb-tables-filter" data-bind-to="dataset-filter">
-
+      <div class="form-group">
+          <label for="dt_govLevel">{{ site.LevelOfGovernment[page.lang] }}</label>
+          <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="4">
+            <option value="">&nbsp;</option>
+            <option value="federal">{{ site.Federal[page.lang] }}</option>
+            <option value="provincial">{{ site.Provincial[page.lang] }}</option>
+            <option value="municipal">{{ site.Municipal[page.lang] }}</option>
+            <option value="aboriginal">{{ site.Aboriginal[page.lang] }}</option>
+          </select>
+      </div>
       <div class="form-group">
         <label for="dt_tag">Tag</label>
         <select class="form-control" id="dt_tag" name="dt_tag" data-column="3">
@@ -26,26 +35,26 @@
 
       <div class="row">
         <div class="col-xs-6">
-          <button type="submit" class="btn btn-primary" aria-controls="dataset-filter">Filter</button>
+          <button type="submit" class="btn btn-primary" aria-controls="dataset-filter">{{ site.Filter[page.lang] }}</button>
         </div>
         <div class="col-xs-6">
-          <button type="reset" class="btn btn-default">Clear</button>
+          <button type="reset" class="btn btn-default">{{ site.Clear[page.lang] }}</button>
         </div>
-      </div>
-
+    </div>
     </form>
   </details>
 </div>
 
 <!-- Data Table -->
 <div class="col-md-9">
-  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [0, "asc"], "columnDefs": [{"targets": [3], "visible": false}], "paging": true}'>
+  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [0, "asc"], "columnDefs": [{"targets": [3,4], "visible": false}], "paging": true}'>
     <thead>
       <tr>
         <th>Standard</th>
         <th>Description</th>
         <th>Organization</th>
         <th>Tags</th>
+        <th>Level of government</th>
       </tr>
     </thead>
     <tbody>
@@ -57,8 +66,28 @@
           <td>{{ standard.description[page.lang] }}</td>
           <td><a href="{{ standard.specURL[page.lang] }}" target="_blank">{{ standard.standardsOrg }}</a></td>
           <td>
-            {% for tag in oss.tags[page.lang] %}
+            {% for tag in standard.tags[page.lang] %}
               {{ tag }}&nbsp;
+            {% endfor %}
+          </td>
+          <td>
+            {% for administration in standard.administrations %}
+            {% assign aName = site.data.administrations.federal | where: "code", administration.adminCode %}
+              {% if aName[0].name[page.lang] != nil %}
+                {{ site.Federal[page.lang] }}
+              {% endif %}
+            {% assign aName = site.data.administrations.provincial | where: "code", administration.adminCode %}
+              {% if aName[0].name[page.lang] != nil %}
+                {{ site.Provincial[page.lang] }}
+              {% endif %}
+            {% assign aName = site.data.administrations.municipal | where: "code", administration.adminCode %}
+              {% if aName[0].name[page.lang] != nil %}
+                {{ site.Municipal[page.lang] }}
+              {% endif %}
+            {% assign aName = site.data.administrations.aboriginal | where: "code", administration.adminCode %}
+              {% if aName[0].name[page.lang] != nil %}
+                {{ site.Aboriginal[page.lang] }}
+              {% endif %}
             {% endfor %}
           </td>
         </tr>
@@ -81,9 +110,15 @@
       <p>Is being used by:</p>
       {% for admin in standard.administrations %}
         <div class="row">
-          {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
+          {% assign aNameFederal = site.data.administrations.federal | where: "code", admin.adminCode %}
+          {% assign aNameProvincial = site.data.administrations.provincial | where: "code", admin.adminCode %}
+          {% assign aNameMunicipal = site.data.administrations.municipal | where: "code", admin.adminCode %}
+          {% assign aNameAboriginal = site.data.administrations.aboriginal | where: "code", admin.adminCode %}
           <div class="col-md-7">
-            <strong>{{ aName[0].name[page.lang] }}</strong>
+            <strong>{{ aNameFederal[0].name[page.lang] }}</strong>
+            <strong>{{ aNameProvincial[0].name[page.lang] }}</strong>
+            <strong>{{ aNameMunicipal[0].name[page.lang] }}</strong>
+            <strong>{{ aNameAboriginal[0].name[page.lang] }}</strong>
           </div>
           <div class="col-md-5">{{ admin.status }}</div>
         </div>
