--- a/_includes/form/presets/adminCode.html
+++ b/_includes/form/presets/adminCode.html
@@ -38,6 +38,6 @@
         {% endfor %}
       </optgroup>
     </select>
-    <button type="button" class="btn btn-primary" id = "newAmdminButton"><i class="glyphicon glyphicon-plus"></i> Add new administration</button>
+    <button type="button" class="btn btn-primary" id = "newAmdminButton"><i class="glyphicon glyphicon-plus"></i> {{ site.data.i18n.form.presets.AdminCode.add[page.lang] }}</button>
   </div>
 </div>
