--- a/_includes/form/presets/newAdmin.html
+++ b/_includes/form/presets/newAdmin.html
@@ -1,5 +1,5 @@
 <div id="newAdmin" class="hide" style = "position:relative; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 4px; padding-left: 20px">
-  <h2 style="text-align: center; margin-top:10px">New Administration </h2>
+  <h2 style="text-align: center; margin-top:10px">{{ site.data.i18n.form.presets.AdminCode.add[page.lang] }} </h2>
   <button id="removeNewAdminButton" style = "position: absolute; top: 10px; right: 10px;" class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
   {% for field in include.fields %}
 
